--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,26 @@ knitr::opts_chunk$set(
 ```
 
 Color for Data Visualization
+<!-- https://ecotrust-canada.github.io/markdown-toc/ -->
+
+# Table of Contents
+
+- [Introduction](#introduction)
+  * [Installation](#installation)
+- [Analysis and display of palettes](#analysis-and-display-of-palettes)
+- [Converters](#converters)
+  * [Hex RGB to HCL](#hex-rgb-to-hcl)
+  * [Hex RGB palette to simulated colorblind hex RGB](#hex-rgb-palette-to-simulated-colorblind-hex-rgb)
+- [Precalculated palettes](#precalculated-palettes)
+  * [7 category qualitative palette for nominal data](#7-category-qualitative-palette-for-nominal-data)
+  * [Sequential palette for heatmaps](#sequential-palette-for-heatmaps)
+    + [Comparison of Heat Palettes](#comparison-of-heat-palettes)
+  * [Divergent colorscale for AUC heatmaps](#divergent-colorscale-for-auc-heatmaps)
+- [HCL Palettes with power curves, stepped and cyclic elements](#hcl-palettes-with-power-curves-stepped-and-cyclic-elements)
+- [Multihue HCL Palettes with bezier interpolation and lightness correction](#multihue-hcl-palettes-with-bezier-interpolation-and-lightness-correction)
+  * [Comparison with non-bezier multi-hue palettes](#comparison-with-non-bezier-multi-hue-palettes)
+
+# Introduction
 
 This package provides  
 
@@ -46,7 +66,7 @@ Install the `datacolor` package from github:
 # devtools::install_github("allopole/datacolor")
 ```
 
-## Analysis and display of palettes
+# Analysis and display of palettes
 
 See `?colorbar` for description of `colorbar` and `colorplot` functions
 
@@ -70,9 +90,9 @@ colorplot(pal,dots=TRUE,colorblind=TRUE)
 ```
 
 
-## Converters
+# Converters
 
-### Hex RGB(A) to HCL
+## Hex RGB to HCL
 
 See `?hex2hcl`
 
@@ -81,7 +101,7 @@ pal <- grDevices::rainbow(7)
 hex2hcl(pal)
 ```
 
-### Hex RGB palette to simulated colorblind hex RGB
+## Hex RGB palette to simulated colorblind hex RGB
 
 See `?colorblind`
 
@@ -91,9 +111,9 @@ colorblind(pal)
 colorplot(colorblind(pal)$deuteranopia)
 ```
 
-## Precalculated palettes
+# Precalculated palettes
 
-### 7-category qualitative palette for nominal data
+## 7 category qualitative palette for nominal data
 
 See `?unipalette` for details
 
@@ -116,7 +136,7 @@ lattice::xyplot(y~x, group=grp, data=randomseries, type="b", pch=16, lwd=3, col 
       )
 ```
 
-### A Sequential palette for heatmaps
+## Sequential palette for heatmaps
 
 A replacement for `grDevices::heat.colors()` or `colorspace::heat_hcl()`
 
@@ -136,7 +156,7 @@ mtext("datacolor::heat()", side=1, line = 2.5)
 
 ```
 
-#### Comparison of Heat Palettes
+### Comparison of Heat Palettes
 
 ```{r heat_comparison}
 n <- 128
@@ -162,7 +182,7 @@ mtext("datacolor::multiHue(128,c('#800000', '#CD4949', '#FF9696','#FFFF00'))", s
 
 ```
 
-### A divergent colorscale for AUC (Area Under the Curve) heatmaps
+## Divergent colorscale for AUC heatmaps
 
 See `?AUColors` for details
 
@@ -197,7 +217,7 @@ lattice::levelplot(randommatrix,
 ```
 
 
-## HCL Palettes with power curves, stepped and cyclic elements
+# HCL Palettes with power curves, stepped and cyclic elements
 
 Use `rampx()`, `stepx()`, and `cyclx()` to construct numeric vectors of `H`, `C`, and `L`. 
 
@@ -225,7 +245,7 @@ colorplot(pal)
 
 
 
-## Multihue HCL Palettes (with bezier interpolation and lightness correction)
+# Multihue HCL Palettes with bezier interpolation and lightness correction
 
 `multihue()`, `multihue.diverge()` and `multihue.constantL()` create multi-hue (multi "stop")
 color scales with perceptually linear lightness gradients and smooth hue gradients (with no
@@ -286,7 +306,7 @@ colorplot(palette,colorblind=TRUE)
 ```
 
 
-### Comparison with non-bezier multi-hue palettes
+## Comparison with non-bezier multi-hue palettes
 
 By comparison, here is the "rainbow" palette showing discontinuities typical of multi-hule palettes. 
 This palette includes corners (second order discontinuities) in lightness. From a perceptual point of view, this palette is not a continuous colors scale, but a multiply-diverging scale with three distinct articulation points (at 1/6, 1/2 and 5/6 of the palette length).
